--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@mui/styled-engine-sc": "^6.2.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "fire": "^0.55.1",
+    "firebase": "^11.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^4.2.4"
